fixed error on scroll bars, now it properly hides the y axis and shows the x axis for overflow

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,8 +16,8 @@ body {
 
 body {
     background-color: black;
-    /* overflow-x: hidden;
-    overflow-y: hidden; */
+    overflow-x: hidden;
+    /* overflow-y: hidden; */
 }
 
 #chat-text {
